- added functionality to switch off the most time-consuming data collection operations

--- a/notebooks/Agent Based Simulation Performance Analysis.ipynb
+++ b/notebooks/Agent Based Simulation Performance Analysis.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:13.733374Z",
-     "start_time": "2021-01-17T21:50:13.716073Z"
+     "end_time": "2021-01-18T15:14:47.497237Z",
+     "start_time": "2021-01-18T15:14:47.476561Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.110681Z",
-     "start_time": "2021-01-17T21:50:13.734967Z"
+     "end_time": "2021-01-18T15:14:47.922940Z",
+     "start_time": "2021-01-18T15:14:47.499084Z"
     }
    },
    "outputs": [],
@@ -41,6 +41,7 @@
     "\n",
     "import line_profiler\n",
     "\n",
+    "from mesa.datacollection import DataCollector\n",
     "from mesa.visualization.ModularVisualization import ModularServer\n",
     "from mesa.visualization.modules import ChartModule\n",
     "from tqdm import tqdm\n",
@@ -52,7 +53,12 @@
     ")\n",
     "\n",
     "from ovm.monetary.markets import MonetaryFMarket\n",
-    "from ovm.monetary.model import MonetaryModel\n",
+    "from ovm.monetary.model import (\n",
+    "    DataCollectionOptions, \n",
+    "    MonetaryModel\n",
+    ")\n",
+    "\n",
+    "from ovm.monetary.reporters import *\n",
     "from ovm.monetary.data_io import construct_ticker_to_series_of_prices_map\n",
     "\n",
     "from ovm.tickers import (\n",
@@ -70,22 +76,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.133664Z",
-     "start_time": "2021-01-17T21:50:14.114866Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "logger = logging.getLogger(__name__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.161110Z",
-     "start_time": "2021-01-17T21:50:14.135491Z"
+     "end_time": "2021-01-18T15:14:47.951133Z",
+     "start_time": "2021-01-18T15:14:47.925386Z"
     }
    },
    "outputs": [
@@ -95,22 +87,23 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "logger = logging.getLogger(__name__)\n",
     "logger.level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.183774Z",
-     "start_time": "2021-01-17T21:50:14.162889Z"
+     "end_time": "2021-01-18T15:14:47.976003Z",
+     "start_time": "2021-01-18T15:14:47.953211Z"
     }
    },
    "outputs": [
@@ -120,7 +113,7 @@
        "'WARNING'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.206033Z",
-     "start_time": "2021-01-17T21:50:14.185455Z"
+     "end_time": "2021-01-18T15:14:47.999972Z",
+     "start_time": "2021-01-18T15:14:47.977645Z"
     }
    },
    "outputs": [
@@ -145,7 +138,7 @@
        "30"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.230760Z",
-     "start_time": "2021-01-17T21:50:14.209619Z"
+     "end_time": "2021-01-18T15:14:48.021430Z",
+     "start_time": "2021-01-18T15:14:48.001508Z"
     }
    },
    "outputs": [],
@@ -177,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.254966Z",
-     "start_time": "2021-01-17T21:50:14.233245Z"
+     "end_time": "2021-01-18T15:14:48.044164Z",
+     "start_time": "2021-01-18T15:14:48.023089Z"
     }
    },
    "outputs": [],
    "source": [
-    "number_of_steps_to_simulate = 10000\n",
+    "number_of_steps_to_simulate = 100\n",
     "\n",
     "TIME_RESOLUTION = TimeResolution.FIFTEEN_SECONDS\n",
     "DATA_SIM_RNG = 42\n",
@@ -210,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.760079Z",
-     "start_time": "2021-01-17T21:50:14.256642Z"
+     "end_time": "2021-01-18T15:14:48.530158Z",
+     "start_time": "2021-01-18T15:14:48.047137Z"
     }
    },
    "outputs": [],
@@ -227,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:50:14.929108Z",
-     "start_time": "2021-01-17T21:50:14.761647Z"
+     "end_time": "2021-01-18T15:14:48.649529Z",
+     "start_time": "2021-01-18T15:14:48.531757Z"
     }
    },
    "outputs": [],
@@ -291,6 +284,12 @@
     "    \"sampling_interval\": sampling_interval,\n",
     "}\n",
     "\n",
+    "data_collection_options = \\\n",
+    "    DataCollectionOptions(compute_gini_coefficient=False,\n",
+    "                          compute_wealth=False,\n",
+    "                          compute_inventory_wealth=False)\n",
+    "\n",
+    "\n",
     "monetary_model = \\\n",
     "    MonetaryModel(num_arbitrageurs=num_arbitrageurs, \n",
     "                  num_keepers=num_keepers, \n",
@@ -304,16 +303,16 @@
     "                  liquidity_supply_emission=liquidity_supply_emission, \n",
     "                  treasury=treasury, \n",
     "                  sampling_interval=sampling_interval, \n",
-    "                  collect_data=False)"
+    "                  data_collection_options=data_collection_options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:59:02.819166Z",
-     "start_time": "2021-01-17T21:58:03.519301Z"
+     "end_time": "2021-01-18T15:15:26.750932Z",
+     "start_time": "2021-01-18T15:15:25.972809Z"
     }
    },
    "outputs": [],
@@ -324,11 +323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:51:18.829665Z",
-     "start_time": "2021-01-17T21:51:18.811975Z"
+     "end_time": "2021-01-18T15:14:49.573819Z",
+     "start_time": "2021-01-18T15:14:49.556484Z"
     }
    },
    "outputs": [],
@@ -340,16 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T21:56:45.158772Z",
-     "start_time": "2021-01-17T21:51:18.831145Z"
+     "end_time": "2021-01-18T15:14:53.034285Z",
+     "start_time": "2021-01-18T15:14:49.575698Z"
     }
    },
    "outputs": [],
    "source": [
     "%lprun \\\n",
+    "    -f compute_gini \\\n",
+    "    -f compute_price_difference \\\n",
+    "    -f compute_futures_price \\\n",
+    "    -f compute_spot_price \\\n",
+    "    -f compute_supply \\\n",
+    "    -f compute_liquidity \\\n",
+    "    -f compute_treasury \\\n",
+    "    -f compute_wealth_for_agent_type \\\n",
+    "    -f compute_inventory_wealth_for_agent \\\n",
+    "    -f compute_inventory_wealth_for_agent_type \\\n",
+    "    -f compute_positional_imbalance_by_market \\\n",
+    "    -f DataCollector.collect \\\n",
     "    -f MonetaryAgent.step \\\n",
     "    -f MonetaryArbitrageur._unwind_positions \\\n",
     "    -f MonetaryArbitrageur._unwind_next_position \\\n",
