- moved DataCollectionOptions to options.py

--- a/notebooks/Agent Based Simulation Performance Analysis.ipynb
+++ b/notebooks/Agent Based Simulation Performance Analysis.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:47.497237Z",
-     "start_time": "2021-01-18T15:14:47.476561Z"
+     "end_time": "2021-01-18T17:24:23.144303Z",
+     "start_time": "2021-01-18T17:24:23.121281Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:47.922940Z",
-     "start_time": "2021-01-18T15:14:47.499084Z"
+     "end_time": "2021-01-18T17:24:23.627714Z",
+     "start_time": "2021-01-18T17:24:23.146175Z"
     }
    },
    "outputs": [],
@@ -53,10 +53,8 @@
     ")\n",
     "\n",
     "from ovm.monetary.markets import MonetaryFMarket\n",
-    "from ovm.monetary.model import (\n",
-    "    DataCollectionOptions, \n",
-    "    MonetaryModel\n",
-    ")\n",
+    "from ovm.monetary.model import MonetaryModel\n",
+    "from ovm.monetary.options import DataCollectionOptions\n",
     "\n",
     "from ovm.monetary.reporters import *\n",
     "from ovm.monetary.data_io import construct_ticker_to_series_of_prices_map\n",
@@ -76,8 +74,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:47.951133Z",
-     "start_time": "2021-01-18T15:14:47.925386Z"
+     "end_time": "2021-01-18T17:24:23.657911Z",
+     "start_time": "2021-01-18T17:24:23.630205Z"
     }
    },
    "outputs": [
@@ -102,8 +100,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:47.976003Z",
-     "start_time": "2021-01-18T15:14:47.953211Z"
+     "end_time": "2021-01-18T17:24:23.684411Z",
+     "start_time": "2021-01-18T17:24:23.660126Z"
     }
    },
    "outputs": [
@@ -127,8 +125,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:47.999972Z",
-     "start_time": "2021-01-18T15:14:47.977645Z"
+     "end_time": "2021-01-18T17:24:23.709774Z",
+     "start_time": "2021-01-18T17:24:23.686179Z"
     }
    },
    "outputs": [
@@ -152,8 +150,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:48.021430Z",
-     "start_time": "2021-01-18T15:14:48.001508Z"
+     "end_time": "2021-01-18T17:24:23.734663Z",
+     "start_time": "2021-01-18T17:24:23.711330Z"
     }
    },
    "outputs": [],
@@ -173,8 +171,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:48.044164Z",
-     "start_time": "2021-01-18T15:14:48.023089Z"
+     "end_time": "2021-01-18T17:24:23.767039Z",
+     "start_time": "2021-01-18T17:24:23.736686Z"
     }
    },
    "outputs": [],
@@ -206,8 +204,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:48.530158Z",
-     "start_time": "2021-01-18T15:14:48.047137Z"
+     "end_time": "2021-01-18T17:24:24.302961Z",
+     "start_time": "2021-01-18T17:24:23.770970Z"
     }
    },
    "outputs": [],
@@ -223,8 +221,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:48.649529Z",
-     "start_time": "2021-01-18T15:14:48.531757Z"
+     "end_time": "2021-01-18T17:24:24.441936Z",
+     "start_time": "2021-01-18T17:24:24.304987Z"
     }
    },
    "outputs": [],
@@ -285,7 +283,8 @@
     "}\n",
     "\n",
     "data_collection_options = \\\n",
-    "    DataCollectionOptions(compute_gini_coefficient=False,\n",
+    "    DataCollectionOptions(perform_data_collection=True, \n",
+    "                          compute_gini_coefficient=False,\n",
     "                          compute_wealth=False,\n",
     "                          compute_inventory_wealth=False)\n",
     "\n",
@@ -308,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:15:26.750932Z",
-     "start_time": "2021-01-18T15:15:25.972809Z"
+     "end_time": "2021-01-18T17:24:25.485886Z",
+     "start_time": "2021-01-18T17:24:24.443713Z"
     }
    },
    "outputs": [],
@@ -326,8 +325,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:49.573819Z",
-     "start_time": "2021-01-18T15:14:49.556484Z"
+     "end_time": "2021-01-18T17:24:25.508837Z",
+     "start_time": "2021-01-18T17:24:25.487464Z"
     }
    },
    "outputs": [],
@@ -342,8 +341,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T15:14:53.034285Z",
-     "start_time": "2021-01-18T15:14:49.575698Z"
+     "end_time": "2021-01-18T17:24:29.509502Z",
+     "start_time": "2021-01-18T17:24:25.510555Z"
     }
    },
    "outputs": [],
