- updated performance analysis notebook

--- a/notebooks/Agent Based Simulation Performance Analysis.ipynb
+++ b/notebooks/Agent Based Simulation Performance Analysis.ipynb
@@ -218,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:24.441936Z",
-     "start_time": "2021-01-18T17:24:24.304987Z"
+     "end_time": "2021-01-18T17:26:10.930861Z",
+     "start_time": "2021-01-18T17:26:10.827329Z"
     }
    },
    "outputs": [],
@@ -307,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:25.485886Z",
-     "start_time": "2021-01-18T17:24:24.443713Z"
+     "end_time": "2021-01-18T17:26:12.205377Z",
+     "start_time": "2021-01-18T17:26:11.174001Z"
     }
    },
    "outputs": [],
@@ -373,6 +373,371 @@
     "    -f MonetaryFMarket.fund \\\n",
     "    -f MonetaryModel.step \\\n",
     "    run_model(number_of_steps_to_simulate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-18T17:26:14.133843Z",
+     "start_time": "2021-01-18T17:26:14.091734Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>d-ETH-USD</th>\n",
+       "      <th>d-COMP-USD</th>\n",
+       "      <th>d-LINK-USD</th>\n",
+       "      <th>d-OVL-USD</th>\n",
+       "      <th>s-ETH-USD</th>\n",
+       "      <th>s-COMP-USD</th>\n",
+       "      <th>s-LINK-USD</th>\n",
+       "      <th>s-OVL-USD</th>\n",
+       "      <th>f-ETH-USD</th>\n",
+       "      <th>f-COMP-USD</th>\n",
+       "      <th>f-LINK-USD</th>\n",
+       "      <th>f-OVL-USD</th>\n",
+       "      <th>Skew ETH-USD</th>\n",
+       "      <th>Skew COMP-USD</th>\n",
+       "      <th>Skew LINK-USD</th>\n",
+       "      <th>Skew OVL-USD</th>\n",
+       "      <th>Supply</th>\n",
+       "      <th>Treasury</th>\n",
+       "      <th>Liquidity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.707481</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.707481</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.707481</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.707481</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000069</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.008617</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>284.559134</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.774473</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.707481</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.000389</td>\n",
+       "      <td>-0.001381</td>\n",
+       "      <td>-0.015742</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>284.689582</td>\n",
+       "      <td>157.495320</td>\n",
+       "      <td>7.830755</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.707481</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.000412</td>\n",
+       "      <td>-0.001381</td>\n",
+       "      <td>-0.011388</td>\n",
+       "      <td>-0.016055</td>\n",
+       "      <td>284.696105</td>\n",
+       "      <td>157.495320</td>\n",
+       "      <td>7.835585</td>\n",
+       "      <td>3623.170163</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.746356</td>\n",
+       "      <td>3565.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.973000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>99999.986500</td>\n",
+       "      <td>0.013500</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0.010164</td>\n",
+       "      <td>0.003152</td>\n",
+       "      <td>-0.014288</td>\n",
+       "      <td>0.002014</td>\n",
+       "      <td>281.715369</td>\n",
+       "      <td>156.783744</td>\n",
+       "      <td>7.937439</td>\n",
+       "      <td>3540.069930</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.824030</td>\n",
+       "      <td>3547.198503</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.870436</td>\n",
+       "      <td>-8.973</td>\n",
+       "      <td>99999.703411</td>\n",
+       "      <td>0.161765</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.011546</td>\n",
+       "      <td>0.003152</td>\n",
+       "      <td>-0.009353</td>\n",
+       "      <td>0.002014</td>\n",
+       "      <td>281.330548</td>\n",
+       "      <td>156.783744</td>\n",
+       "      <td>7.937439</td>\n",
+       "      <td>3540.069930</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.863198</td>\n",
+       "      <td>3547.198503</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.843436</td>\n",
+       "      <td>-8.973</td>\n",
+       "      <td>99999.689911</td>\n",
+       "      <td>0.175265</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>0.012414</td>\n",
+       "      <td>0.003152</td>\n",
+       "      <td>-0.006198</td>\n",
+       "      <td>0.002014</td>\n",
+       "      <td>281.089219</td>\n",
+       "      <td>156.783744</td>\n",
+       "      <td>7.912238</td>\n",
+       "      <td>3540.069930</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.863198</td>\n",
+       "      <td>3547.198503</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.843436</td>\n",
+       "      <td>-8.973</td>\n",
+       "      <td>99999.689911</td>\n",
+       "      <td>0.175265</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0.012156</td>\n",
+       "      <td>0.003405</td>\n",
+       "      <td>-0.005353</td>\n",
+       "      <td>0.002014</td>\n",
+       "      <td>281.160966</td>\n",
+       "      <td>156.744212</td>\n",
+       "      <td>7.905518</td>\n",
+       "      <td>3540.069930</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.863198</td>\n",
+       "      <td>3547.198503</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.843436</td>\n",
+       "      <td>-8.973</td>\n",
+       "      <td>99999.689911</td>\n",
+       "      <td>0.175265</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>0.011616</td>\n",
+       "      <td>0.003152</td>\n",
+       "      <td>-0.006198</td>\n",
+       "      <td>0.002014</td>\n",
+       "      <td>281.310981</td>\n",
+       "      <td>156.783744</td>\n",
+       "      <td>7.912238</td>\n",
+       "      <td>3540.069930</td>\n",
+       "      <td>284.578702</td>\n",
+       "      <td>157.277894</td>\n",
+       "      <td>7.863198</td>\n",
+       "      <td>3547.198503</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.843436</td>\n",
+       "      <td>-8.973</td>\n",
+       "      <td>99999.689911</td>\n",
+       "      <td>0.175265</td>\n",
+       "      <td>28500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     d-ETH-USD  d-COMP-USD  d-LINK-USD  d-OVL-USD   s-ETH-USD  s-COMP-USD  \\\n",
+       "0     0.000000    0.000000    0.000000   0.000000  284.578702  157.277894   \n",
+       "1     0.000000    0.000000    0.000000   0.000000  284.578702  157.277894   \n",
+       "2     0.000069    0.000000   -0.008617   0.000000  284.559134  157.277894   \n",
+       "3    -0.000389   -0.001381   -0.015742   0.000000  284.689582  157.495320   \n",
+       "4    -0.000412   -0.001381   -0.011388  -0.016055  284.696105  157.495320   \n",
+       "..         ...         ...         ...        ...         ...         ...   \n",
+       "96    0.010164    0.003152   -0.014288   0.002014  281.715369  156.783744   \n",
+       "97    0.011546    0.003152   -0.009353   0.002014  281.330548  156.783744   \n",
+       "98    0.012414    0.003152   -0.006198   0.002014  281.089219  156.783744   \n",
+       "99    0.012156    0.003405   -0.005353   0.002014  281.160966  156.744212   \n",
+       "100   0.011616    0.003152   -0.006198   0.002014  281.310981  156.783744   \n",
+       "\n",
+       "     s-LINK-USD    s-OVL-USD   f-ETH-USD  f-COMP-USD  f-LINK-USD    f-OVL-USD  \\\n",
+       "0      7.707481  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
+       "1      7.707481  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
+       "2      7.774473  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
+       "3      7.830755  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
+       "4      7.835585  3623.170163  284.578702  157.277894    7.746356  3565.000000   \n",
+       "..          ...          ...         ...         ...         ...          ...   \n",
+       "96     7.937439  3540.069930  284.578702  157.277894    7.824030  3547.198503   \n",
+       "97     7.937439  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
+       "98     7.912238  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
+       "99     7.905518  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
+       "100    7.912238  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
+       "\n",
+       "     Skew ETH-USD  Skew COMP-USD  Skew LINK-USD  Skew OVL-USD         Supply  \\\n",
+       "0             0.0            0.0       0.000000         0.000  100000.000000   \n",
+       "1             0.0            0.0       0.000000         0.000  100000.000000   \n",
+       "2             0.0            0.0       0.000000         0.000  100000.000000   \n",
+       "3             0.0            0.0       0.000000         0.000  100000.000000   \n",
+       "4             0.0            0.0       8.973000         0.000   99999.986500   \n",
+       "..            ...            ...            ...           ...            ...   \n",
+       "96            0.0            0.0      26.870436        -8.973   99999.703411   \n",
+       "97            0.0            0.0      35.843436        -8.973   99999.689911   \n",
+       "98            0.0            0.0      35.843436        -8.973   99999.689911   \n",
+       "99            0.0            0.0      35.843436        -8.973   99999.689911   \n",
+       "100           0.0            0.0      35.843436        -8.973   99999.689911   \n",
+       "\n",
+       "     Treasury  Liquidity  \n",
+       "0    0.000000    28500.0  \n",
+       "1    0.000000    28500.0  \n",
+       "2    0.000000    28500.0  \n",
+       "3    0.000000    28500.0  \n",
+       "4    0.013500    28500.0  \n",
+       "..        ...        ...  \n",
+       "96   0.161765    28500.0  \n",
+       "97   0.175265    28500.0  \n",
+       "98   0.175265    28500.0  \n",
+       "99   0.175265    28500.0  \n",
+       "100  0.175265    28500.0  \n",
+       "\n",
+       "[101 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monetary_model.data_collector.get_model_vars_dataframe()"
    ]
   },
   {
