--- a/notebooks/Agent Based Simulation Performance Analysis.ipynb
+++ b/notebooks/Agent Based Simulation Performance Analysis.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.144303Z",
-     "start_time": "2021-01-18T17:24:23.121281Z"
+     "end_time": "2021-01-18T17:33:25.004911Z",
+     "start_time": "2021-01-18T17:33:24.982687Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.627714Z",
-     "start_time": "2021-01-18T17:24:23.146175Z"
+     "end_time": "2021-01-18T17:33:49.314324Z",
+     "start_time": "2021-01-18T17:33:49.285033Z"
     }
    },
    "outputs": [],
@@ -40,7 +40,8 @@
     "import typing as tp\n",
     "\n",
     "import line_profiler\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "from mesa.datacollection import DataCollector\n",
     "from mesa.visualization.ModularVisualization import ModularServer\n",
     "from mesa.visualization.modules import ChartModule\n",
@@ -66,7 +67,7 @@
     "    YFI_USD_TICKER\n",
     ")\n",
     "\n",
-    "from ovm.time_resolution import TimeResolution"
+    "from ovm.time_resolution import TimeResolution\n"
    ]
   },
   {
@@ -74,8 +75,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.657911Z",
-     "start_time": "2021-01-18T17:24:23.630205Z"
+     "end_time": "2021-01-18T17:33:25.807642Z",
+     "start_time": "2021-01-18T17:33:25.781136Z"
     }
    },
    "outputs": [
@@ -100,8 +101,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.684411Z",
-     "start_time": "2021-01-18T17:24:23.660126Z"
+     "end_time": "2021-01-18T17:33:25.837221Z",
+     "start_time": "2021-01-18T17:33:25.810135Z"
     }
    },
    "outputs": [
@@ -125,8 +126,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.709774Z",
-     "start_time": "2021-01-18T17:24:23.686179Z"
+     "end_time": "2021-01-18T17:33:25.865247Z",
+     "start_time": "2021-01-18T17:33:25.839134Z"
     }
    },
    "outputs": [
@@ -150,8 +151,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.734663Z",
-     "start_time": "2021-01-18T17:24:23.711330Z"
+     "end_time": "2021-01-18T17:33:25.892507Z",
+     "start_time": "2021-01-18T17:33:25.867528Z"
     }
    },
    "outputs": [],
@@ -171,8 +172,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:23.767039Z",
-     "start_time": "2021-01-18T17:24:23.736686Z"
+     "end_time": "2021-01-18T17:33:25.921809Z",
+     "start_time": "2021-01-18T17:33:25.894076Z"
     }
    },
    "outputs": [],
@@ -193,6 +194,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-18T18:00:03.895595Z",
+     "start_time": "2021-01-18T18:00:03.852815Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "skew_labels = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,8 +219,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:24.302961Z",
-     "start_time": "2021-01-18T17:24:23.770970Z"
+     "end_time": "2021-01-18T17:33:26.445233Z",
+     "start_time": "2021-01-18T17:33:25.925839Z"
     }
    },
    "outputs": [],
@@ -218,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:26:10.930861Z",
-     "start_time": "2021-01-18T17:26:10.827329Z"
+     "end_time": "2021-01-18T17:33:26.575819Z",
+     "start_time": "2021-01-18T17:33:26.447125Z"
     }
    },
    "outputs": [],
@@ -307,11 +322,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:26:12.205377Z",
-     "start_time": "2021-01-18T17:26:11.174001Z"
+     "end_time": "2021-01-18T17:33:27.721202Z",
+     "start_time": "2021-01-18T17:33:26.577793Z"
     }
    },
    "outputs": [],
@@ -325,8 +340,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:25.508837Z",
-     "start_time": "2021-01-18T17:24:25.487464Z"
+     "end_time": "2021-01-18T17:33:27.748099Z",
+     "start_time": "2021-01-18T17:33:27.723772Z"
     }
    },
    "outputs": [],
@@ -341,8 +356,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:24:29.509502Z",
-     "start_time": "2021-01-18T17:24:25.510555Z"
+     "end_time": "2021-01-18T17:33:31.958471Z",
+     "start_time": "2021-01-18T17:33:27.750012Z"
     }
    },
    "outputs": [],
@@ -377,11 +392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T17:26:14.133843Z",
-     "start_time": "2021-01-18T17:26:14.091734Z"
+     "end_time": "2021-01-18T17:34:26.457512Z",
+     "start_time": "2021-01-18T17:34:26.414368Z"
     }
    },
    "outputs": [
@@ -441,13 +456,13 @@
        "      <td>284.578702</td>\n",
        "      <td>157.277894</td>\n",
        "      <td>7.707481</td>\n",
-       "      <td>3565.000000</td>\n",
+       "      <td>3565.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>100000.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100000.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>28500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -463,13 +478,13 @@
        "      <td>284.578702</td>\n",
        "      <td>157.277894</td>\n",
        "      <td>7.707481</td>\n",
-       "      <td>3565.000000</td>\n",
+       "      <td>3565.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>100000.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100000.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>28500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -485,13 +500,13 @@
        "      <td>284.578702</td>\n",
        "      <td>157.277894</td>\n",
        "      <td>7.707481</td>\n",
-       "      <td>3565.000000</td>\n",
+       "      <td>3565.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>100000.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100000.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>28500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -507,13 +522,13 @@
        "      <td>284.578702</td>\n",
        "      <td>157.277894</td>\n",
        "      <td>7.707481</td>\n",
-       "      <td>3565.000000</td>\n",
+       "      <td>3565.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>100000.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100000.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>28500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -529,215 +544,57 @@
        "      <td>284.578702</td>\n",
        "      <td>157.277894</td>\n",
        "      <td>7.746356</td>\n",
-       "      <td>3565.000000</td>\n",
+       "      <td>3565.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>8.973000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>99999.986500</td>\n",
-       "      <td>0.013500</td>\n",
-       "      <td>28500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>0.010164</td>\n",
-       "      <td>0.003152</td>\n",
-       "      <td>-0.014288</td>\n",
-       "      <td>0.002014</td>\n",
-       "      <td>281.715369</td>\n",
-       "      <td>156.783744</td>\n",
-       "      <td>7.937439</td>\n",
-       "      <td>3540.069930</td>\n",
-       "      <td>284.578702</td>\n",
-       "      <td>157.277894</td>\n",
-       "      <td>7.824030</td>\n",
-       "      <td>3547.198503</td>\n",
+       "      <td>8.973</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.870436</td>\n",
-       "      <td>-8.973</td>\n",
-       "      <td>99999.703411</td>\n",
-       "      <td>0.161765</td>\n",
-       "      <td>28500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>0.011546</td>\n",
-       "      <td>0.003152</td>\n",
-       "      <td>-0.009353</td>\n",
-       "      <td>0.002014</td>\n",
-       "      <td>281.330548</td>\n",
-       "      <td>156.783744</td>\n",
-       "      <td>7.937439</td>\n",
-       "      <td>3540.069930</td>\n",
-       "      <td>284.578702</td>\n",
-       "      <td>157.277894</td>\n",
-       "      <td>7.863198</td>\n",
-       "      <td>3547.198503</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>35.843436</td>\n",
-       "      <td>-8.973</td>\n",
-       "      <td>99999.689911</td>\n",
-       "      <td>0.175265</td>\n",
-       "      <td>28500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>0.012414</td>\n",
-       "      <td>0.003152</td>\n",
-       "      <td>-0.006198</td>\n",
-       "      <td>0.002014</td>\n",
-       "      <td>281.089219</td>\n",
-       "      <td>156.783744</td>\n",
-       "      <td>7.912238</td>\n",
-       "      <td>3540.069930</td>\n",
-       "      <td>284.578702</td>\n",
-       "      <td>157.277894</td>\n",
-       "      <td>7.863198</td>\n",
-       "      <td>3547.198503</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>35.843436</td>\n",
-       "      <td>-8.973</td>\n",
-       "      <td>99999.689911</td>\n",
-       "      <td>0.175265</td>\n",
-       "      <td>28500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>0.012156</td>\n",
-       "      <td>0.003405</td>\n",
-       "      <td>-0.005353</td>\n",
-       "      <td>0.002014</td>\n",
-       "      <td>281.160966</td>\n",
-       "      <td>156.744212</td>\n",
-       "      <td>7.905518</td>\n",
-       "      <td>3540.069930</td>\n",
-       "      <td>284.578702</td>\n",
-       "      <td>157.277894</td>\n",
-       "      <td>7.863198</td>\n",
-       "      <td>3547.198503</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>35.843436</td>\n",
-       "      <td>-8.973</td>\n",
-       "      <td>99999.689911</td>\n",
-       "      <td>0.175265</td>\n",
-       "      <td>28500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>0.011616</td>\n",
-       "      <td>0.003152</td>\n",
-       "      <td>-0.006198</td>\n",
-       "      <td>0.002014</td>\n",
-       "      <td>281.310981</td>\n",
-       "      <td>156.783744</td>\n",
-       "      <td>7.912238</td>\n",
-       "      <td>3540.069930</td>\n",
-       "      <td>284.578702</td>\n",
-       "      <td>157.277894</td>\n",
-       "      <td>7.863198</td>\n",
-       "      <td>3547.198503</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>35.843436</td>\n",
-       "      <td>-8.973</td>\n",
-       "      <td>99999.689911</td>\n",
-       "      <td>0.175265</td>\n",
+       "      <td>99999.9865</td>\n",
+       "      <td>0.0135</td>\n",
        "      <td>28500.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>101 rows × 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     d-ETH-USD  d-COMP-USD  d-LINK-USD  d-OVL-USD   s-ETH-USD  s-COMP-USD  \\\n",
-       "0     0.000000    0.000000    0.000000   0.000000  284.578702  157.277894   \n",
-       "1     0.000000    0.000000    0.000000   0.000000  284.578702  157.277894   \n",
-       "2     0.000069    0.000000   -0.008617   0.000000  284.559134  157.277894   \n",
-       "3    -0.000389   -0.001381   -0.015742   0.000000  284.689582  157.495320   \n",
-       "4    -0.000412   -0.001381   -0.011388  -0.016055  284.696105  157.495320   \n",
-       "..         ...         ...         ...        ...         ...         ...   \n",
-       "96    0.010164    0.003152   -0.014288   0.002014  281.715369  156.783744   \n",
-       "97    0.011546    0.003152   -0.009353   0.002014  281.330548  156.783744   \n",
-       "98    0.012414    0.003152   -0.006198   0.002014  281.089219  156.783744   \n",
-       "99    0.012156    0.003405   -0.005353   0.002014  281.160966  156.744212   \n",
-       "100   0.011616    0.003152   -0.006198   0.002014  281.310981  156.783744   \n",
+       "   d-ETH-USD  d-COMP-USD  d-LINK-USD  d-OVL-USD   s-ETH-USD  s-COMP-USD  \\\n",
+       "0   0.000000    0.000000    0.000000   0.000000  284.578702  157.277894   \n",
+       "1   0.000000    0.000000    0.000000   0.000000  284.578702  157.277894   \n",
+       "2   0.000069    0.000000   -0.008617   0.000000  284.559134  157.277894   \n",
+       "3  -0.000389   -0.001381   -0.015742   0.000000  284.689582  157.495320   \n",
+       "4  -0.000412   -0.001381   -0.011388  -0.016055  284.696105  157.495320   \n",
        "\n",
-       "     s-LINK-USD    s-OVL-USD   f-ETH-USD  f-COMP-USD  f-LINK-USD    f-OVL-USD  \\\n",
-       "0      7.707481  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
-       "1      7.707481  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
-       "2      7.774473  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
-       "3      7.830755  3565.000000  284.578702  157.277894    7.707481  3565.000000   \n",
-       "4      7.835585  3623.170163  284.578702  157.277894    7.746356  3565.000000   \n",
-       "..          ...          ...         ...         ...         ...          ...   \n",
-       "96     7.937439  3540.069930  284.578702  157.277894    7.824030  3547.198503   \n",
-       "97     7.937439  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
-       "98     7.912238  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
-       "99     7.905518  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
-       "100    7.912238  3540.069930  284.578702  157.277894    7.863198  3547.198503   \n",
+       "   s-LINK-USD    s-OVL-USD   f-ETH-USD  f-COMP-USD  f-LINK-USD  f-OVL-USD  \\\n",
+       "0    7.707481  3565.000000  284.578702  157.277894    7.707481     3565.0   \n",
+       "1    7.707481  3565.000000  284.578702  157.277894    7.707481     3565.0   \n",
+       "2    7.774473  3565.000000  284.578702  157.277894    7.707481     3565.0   \n",
+       "3    7.830755  3565.000000  284.578702  157.277894    7.707481     3565.0   \n",
+       "4    7.835585  3623.170163  284.578702  157.277894    7.746356     3565.0   \n",
        "\n",
-       "     Skew ETH-USD  Skew COMP-USD  Skew LINK-USD  Skew OVL-USD         Supply  \\\n",
-       "0             0.0            0.0       0.000000         0.000  100000.000000   \n",
-       "1             0.0            0.0       0.000000         0.000  100000.000000   \n",
-       "2             0.0            0.0       0.000000         0.000  100000.000000   \n",
-       "3             0.0            0.0       0.000000         0.000  100000.000000   \n",
-       "4             0.0            0.0       8.973000         0.000   99999.986500   \n",
-       "..            ...            ...            ...           ...            ...   \n",
-       "96            0.0            0.0      26.870436        -8.973   99999.703411   \n",
-       "97            0.0            0.0      35.843436        -8.973   99999.689911   \n",
-       "98            0.0            0.0      35.843436        -8.973   99999.689911   \n",
-       "99            0.0            0.0      35.843436        -8.973   99999.689911   \n",
-       "100           0.0            0.0      35.843436        -8.973   99999.689911   \n",
+       "   Skew ETH-USD  Skew COMP-USD  Skew LINK-USD  Skew OVL-USD       Supply  \\\n",
+       "0           0.0            0.0          0.000           0.0  100000.0000   \n",
+       "1           0.0            0.0          0.000           0.0  100000.0000   \n",
+       "2           0.0            0.0          0.000           0.0  100000.0000   \n",
+       "3           0.0            0.0          0.000           0.0  100000.0000   \n",
+       "4           0.0            0.0          8.973           0.0   99999.9865   \n",
        "\n",
-       "     Treasury  Liquidity  \n",
-       "0    0.000000    28500.0  \n",
-       "1    0.000000    28500.0  \n",
-       "2    0.000000    28500.0  \n",
-       "3    0.000000    28500.0  \n",
-       "4    0.013500    28500.0  \n",
-       "..        ...        ...  \n",
-       "96   0.161765    28500.0  \n",
-       "97   0.175265    28500.0  \n",
-       "98   0.175265    28500.0  \n",
-       "99   0.175265    28500.0  \n",
-       "100  0.175265    28500.0  \n",
-       "\n",
-       "[101 rows x 19 columns]"
+       "   Treasury  Liquidity  \n",
+       "0    0.0000    28500.0  \n",
+       "1    0.0000    28500.0  \n",
+       "2    0.0000    28500.0  \n",
+       "3    0.0000    28500.0  \n",
+       "4    0.0135    28500.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "monetary_model.data_collector.get_model_vars_dataframe()"
+    "model_vars_df = monetary_model.data_collector.get_model_vars_dataframe()\n",
+    "model_vars_df.head()"
    ]
   },
   {
@@ -746,6 +603,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot()"
+   ]
   }
  ],
  "metadata": {
